# OpenLoom

./: .gitignore  .tauri-migration-progress.md  LICENSE  README.md  README.zh-CN.md  package-lock.json  package.json  start.bat  对话.txt
.claude/: settings.local.json
.github/workflows/: release.yml
docs/: mac-terminal-fix.md
scripts/: diagnose-terminal.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  pty.rs  state.rs  watcher.rs
src-tauri/src/commands/: ai.rs  config.rs  files.rs  git.rs  mod.rs  pty.rs  ssh.rs  workspace.rs
