[package]
name = "openloom"
version = "0.1.5"
description = "OpenLoom - A modern code editor"
authors = ["OpenLoom"]
edition = "2021"

[lib]
name = "openloom_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "7"
notify-debouncer-mini = "0.5"
walkdir = "2"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
portable-pty = "0.8"
base64 = "0.22"
dirs = "5"
chrono = "0.4"
whoami = "1"
